--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "firebase": "^12.4.0",
+    "gsap": "^3.13.0",
     "icons": "^1.0.0",
     "quill": "^2.0.3",
     "react": "^19.2.0",
