--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
