--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
