--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
     "@tailwindcss/vite": "^4.1.16",
+    "@vercel/analytics": "^1.5.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
