Tab and PWA Name Changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CASTED! Publications",
+  "name": "CASTED!",
   "short_name": "CASTED!",
   "start_url": "/",
   "display": "standalone",
