--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#964B00",
+  "theme_color": "orange",
   "description": "CASTED! Publications blog",
   "icons": [
     {
