--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "brown",
+  "theme_color": "#c88b66",
   "description": "CASTED! Publications blog",
   "icons": [
     {
@@ -13,9 +13,9 @@
       "type": "image/webp"
     },
     {
-      "src": "/icons/casted512.webp",
-      "sizes": "512x512",
-      "type": "image/webp"
+      "src": "/icons/casted512.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
     }
   ]
 }
