--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
