--- a/fcm-server/package.json
+++ b/fcm-server/package.json
@@ -1,3 +1,8 @@
 {
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "firebase-admin": "^13.6.0"
+  }
 }
