--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/generate-sitemap.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+     
   },
+  
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
@@ -28,6 +30,7 @@
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.4",
+    "sitemap": "^9.0.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16"
   },
