--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
-    "rewrites": [
-        {"source" : "/(.*)",
-    "destination" : "/"
-    }   
-    ]
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/fcm-server/api/index.js"
+    },
+    {
+      "source": "/((?!api/|.*\\.).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
